--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "moba",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mobacup.com",
   "dependencies": {
     "axios": "^0.18.0",
     "jwt-decode": "^2.2.0",
